--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,32 +1,93 @@
 [versions]
+activityCompose = "1.9.1"
 agp = "8.7.0-alpha03"
-kotlin = "2.0.0"
-coreKtx = "1.13.0"
+composeBom = "2024.06.00"
+composeCompiler = "1.5.14"
+composeConstraintLayout = "1.0.1"
+composeDestinations = "2.1.0-beta11"
+coreKtx = "1.13.1"
+coroutines = "1.8.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.7.0"
-activityCompose = "1.9.0"
-composeBom = "2024.04.01"
+junitVersion = "1.2.1"
+koin = "3.5.6"
+koinAnnotations = "1.4.0-RC3"
+kotlin = "2.0.0"
+kover = "0.8.3"
+ksp = "2.0.0-1.0.24"
+ktlint = "12.1.1"
+lifecycleRuntimeKtx = "2.8.4"
+mockk = "1.13.12"
+navigation = "2.7.7"
+room = "2.6.1"
+strikt = "0.35.1"
+turbine = "1.1.0"
+timber = "5.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
+timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+
+# region koin
+koin = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+koin-annotations = { module = "io.insert-koin:koin-annotations", version.ref = "koinAnnotations" }
+koin-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref = "koinAnnotations" }
+koin-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
+# endregion koin
+
+# region compose
+compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+compose-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+compose-constraintLayout = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "composeConstraintLayout" }
+compose-material = { module = "androidx.compose.material3:material3" }
+compose-ui = { module = "androidx.compose.ui:ui" }
+compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
+compose-destinations = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "composeDestinations" }
+compose-destinations-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "composeDestinations" }
+# endregion
+
+# region room
+room = { module = "androidx.room:room-runtime", version.ref = "room" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+# endregion
+
+# region test
+test-arch-core = "androidx.arch.core:core-testing:2.2.0"
+test-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+test-junit = { group = "junit", name = "junit", version.ref = "junit" }
+test-koin = { module = "io.insert-koin:koin-test", version.ref = "koin" }
+test-koin-junit4 = { module = "io.insert-koin:koin-test-junit4", version.ref = "koin" }
+test-mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+test-strikt = { module = "io.strikt:strikt-core", version.ref = "strikt" }
+test-strikt-mockk = { module = "io.strikt:strikt-mockk", version.ref = "strikt" }
+test-turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
+# endregion
+
+# region navigation
+navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
+navigation-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
+navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
+# endregion
+
+[bundles]
+compose = ["compose-material", "compose-ui", "compose-ui-tooling-preview", "compose-constraintLayout", "compose-destinations"]
+compose-debug = ["compose-ui-test-manifest", "compose-ui-tooling"]
+koin = ["koin", "koin-compose", "koin-annotations"]
+navigation = ["navigation-ui", "navigation-fragment", "navigation-compose"]
+room = ["room", "room-ktx"]
+test-koin = ["test-koin", "test-koin-junit4"]
+test-strikt = ["test-strikt", "test-strikt-mockk"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 
