--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,8 +22,9 @@ retrofit = "2.11.0"
 room = "2.6.1"
 serialization = "1.7.1"
 strikt = "0.35.1"
-turbine = "1.1.0"
 timber = "5.0.1"
+turbine = "1.1.0"
+uiTooling = "1.6.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -77,6 +78,7 @@ test-turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 # endregion
 
 # region navigation
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
 navigation-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
 navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
