--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ ktlint = "12.1.1"
 lifecycleRuntimeKtx = "2.8.4"
 mockk = "1.13.12"
 navigation = "2.7.7"
+okHttp = "4.12.0"
 retrofit = "2.11.0"
 room = "2.6.1"
 serialization = "1.7.1"
@@ -30,6 +31,7 @@ uiTooling = "1.6.8"
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
+okHttp = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp" }
 serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 
