--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ composeConstraintLayout = "1.0.1"
 composeDestinations = "2.1.0-beta11"
 coreKtx = "1.13.1"
 coroutines = "1.8.1"
+detekt = "1.23.6"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 koin = "3.5.6"
@@ -14,7 +15,6 @@ koinAnnotations = "1.4.0-RC3"
 kotlin = "2.0.0"
 kover = "0.7.6"
 ksp = "2.0.0-1.0.24"
-ktlint = "12.1.1"
 lifecycleRuntimeKtx = "2.8.4"
 mockk = "1.13.12"
 navigation = "2.7.7"
@@ -98,9 +98,9 @@ test-strikt = ["test-strikt", "test-strikt-mockk"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
