--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ okHttp = "4.12.0"
 retrofit = "2.11.0"
 room = "2.6.1"
 serialization = "1.7.1"
+splashScreen = "1.0.1"
 strikt = "0.35.1"
 timber = "5.0.1"
 turbine = "1.1.0"
@@ -29,6 +30,7 @@ uiTooling = "1.6.8"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+androidx-splashScreen = { module = "androidx.core:core-splashscreen", version.ref = "splashScreen" }
 coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 okHttp = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp" }
 serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
