--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,9 +13,9 @@ glideCompose = "1.0.0-beta01"
 junit = "5.11.0"
 koin = "3.5.6"
 koinAnnotations = "1.4.0-RC3"
-kotlin = "2.0.0"
+kotlin = "2.0.20"
 kover = "0.7.6"
-ksp = "2.0.0-1.0.24"
+ksp = "2.0.20-1.0.25"
 lifecycleRuntimeKtx = "2.8.5"
 mockk = "1.13.12"
 navigation = "2.8.0"
@@ -113,4 +113,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
