RA-48 Show attachments

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -92,13 +92,16 @@ navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref 
 
 # region glide
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+glide-annotations = { module = "com.github.bumptech.glide:annotations", version.ref = "glide" }
 glide-compose = { module = "com.github.bumptech.glide:compose", version.ref = "glideCompose" }
+glide-ksp = { module = "com.github.bumptech.glide:ksp", version.ref = "glide" }
+glide-okhttp = { module = "com.github.bumptech.glide:okhttp3-integration", version.ref = "glide" }
 # endregion
 
 [bundles]
 compose = ["compose-material", "compose-ui", "compose-ui-tooling-preview", "compose-constraintLayout", "compose-destinations"]
 compose-debug = ["compose-ui-test-manifest", "compose-ui-tooling"]
-glide = ["glide", "glide-compose"]
+glide = ["glide", "glide-compose", "glide-annotations", "glide-okhttp"]
 koin = ["koin", "koin-compose", "koin-annotations", "koin-compose-navigation"]
 navigation = ["navigation-ui", "navigation-fragment", "navigation-compose"]
 retrofit = ["retrofit", "retrofit-converter-serialization"]
